# VPI_demo

./: CMakeLists.txt  README.md  Strategic_value_table.npy
cpp/: main.cpp
cpp/include/: LookupTable.hpp
data/: Strategic_value_table.npy
python/src/: VPI.py  offline.py
src/: VPI.py  animation.py  offline.py
